[CRD iOS] Feed viewport transformation matrix when renderer context is recreated

The app no longer renders the first frame after we recreate the renderer
context when the app resumes. User has to move the cursor or viewport
to get the frame rendered. That's because we didn't set the transformation
matrix after the renderer context is recreated.

This CL makes GlRenderer cache the viewport matrix and set it on the
canvas when the canvas is recreated.

Bug: 836975
Change-Id: I3d4bb2575aa59f9148181104f320cf7a72770ad5
Reviewed-on: https://chromium-review.googlesource.com/1028848
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553841}
Former-commit-id: ab25983531e94546c8d4e658c67c2cbaa4640900